<resources>
    <string name="app_name">MyStory</string>
    <string name="home">Home</string>
    <string name="profiles">Profile</string>
    <string name="maps">Maps</string>
    <string name="BTN_RETRY">RETRY</string>
    <string name="tb_storiesupload">UPLOAD STORY</string>
    <string name="btn_choose_images">Choose Images from Gallery</string>
    <string name="btn_take_photos">Take Photos from Camera</string>
    <string name="tv_descstoriesupload">Fill Story Descriptions!</string>
    <string name="btn_upload_images">UPLOAD STORY</string>
    <string name="btn_floatings">Upload Story Image</string>
    <string name="BACK_DESC">Back Button</string>
    <string name="IMAGE_DESC_STORIES">Image Story</string>
    <string name="SUCCESS_UPLOAD_IMAGES">Post Uploaded Successfully</string>
    <string name="ERROR_INVALID_EMAIL_FORMAT">Email format invalid!</string>
    <string name="ERROR_EMAIL_ALREADY_REGISTER">Email already registered!</string>
    <string name="ERROR_EMPTY_EMAIL">Email must be filled in!</string>
    <string name="ERROR_EMPTY_NAME">Name must be filled in!</string>
    <string name="ERROR_EMPTY_PASSWORD">Password must be filled in!</string>
    <string name="ERROR_LENGTH_PASSWORD">Password minimum 8 characters long!</string>
    <string name="ERROR_MISMATCH_PASSWORD">Password and confirm password doesnt match!</string>
    <string name="ERROR_NOTSAME_PASSWORD">The password or email incorrect!</string>
    <string name="ERROR_TOOLONG_NAME">Name max is 25 characters!</string>
    <string name="ERROR_EMPTY_EDITEXT">Fill in all fields correctly!</string>
    <string name="INFO_TEXT_LOGIN">Do You Have an Account?</string>
    <string name="TEXT_LOGIN">Login</string>
    <string name="TEXT_LOGIN_APP">Login MyStory</string>
    <string name="TEXT_WELCOME_LOGIN">Welcome to MyStory!</string>
    <string name="TEXT_INFO_REGISTER">Dont Have an Account?</string>
    <string name="TEXT_REGISTER">Register</string>
    <string name="TEXT_REGISTER_APP">Register MyStory</string>
    <string name="TEXT_WELCOME_REGISTER">Sign up to MyStory!</string>
    <string name="FAILED_IMAGE_SHOW"> Image failed to initialize. Check error logs for details!</string>
    <string name="FAILED_IMAGE_CAPTURE">Captured Images failed to initialize. Check error logs for details!</string>
    <string name="EMPTY_IMAGE_UPLOAD">Image must be filled in!</string>
    <string name="EMPTY_CAPTION_UPLOAD">Caption must be filled in!</string>
    <string name="EMPTY_LOCATION_UPLOAD">Location must be filled in!</string>
    <string name="EMPTY_ERROR_STORY_WIDGET">Story Widget Empty!</string>
    <string name="SETTING">Settings</string>
    <string name="CHANGE_LANGUAGES">Change Language</string>
    <string name="REPORT_BUG">Report Bug</string>
    <string name="LOGOUT">LOG OUT</string>
    <string name="CONFIRMATION_LOGOUT_TITLE">Logout Confirmation</string>
    <string name="CONFIRMATION_LOGOUT_MESSAGE">Do you want to logout?</string>
    <string name="CONFIRMATION_LOGOUT_YES">Yes</string>
    <string name="CONFIRMATION_LOGOUT_CANCEL">Cancel</string>
    <string name="WELCOME_TITLE_PAGE">Welcome To MyStory!</string>
    <string name="MESSAGE_WELCOME_PAGE">Welcome to MyStory app! You can share your unique stories, activities, and life to the world instantly! Start your creative adventures with uploading your own stories here!</string>
    <string name="INFO">Other Information</string>
    <string name="MSG_REGISTERS">You Must Complete the data for your account!</string>
    <string name="MSG_LOGIN">Start your journey in MyStory</string>
    <string name="MSG_DETAIL_STORIES">Details Story</string>
    <string name="COPYRIGHT">Benaya Laskar Firdaus | MyStory</string>
    <string name="DATA_NOT_FOUND">Data Not Found...</string>
    <string name="FULL_NAME">Full Name</string>
    <string name="EMAIL">Email</string>
    <string name="PASSWORD">Password</string>
    <string name="PASSWORD_CONFIRM">Confirm Password</string>
    <string name="FULL_NAME_HINT">Enter Your Full Name!</string>
    <string name="EMAIL_HINT">Enter Your Email!</string>
    <string name="PASSWORD_HINT">Enter Your Password!</string>
    <string name="CONFIRM_PASSWORD_HINT">Enter Your Password!</string>
    <string name="LAST_LOGIN">Last Login</string>
    <string name="ERROR_PERMISSIONS">Access to your location was failed. Please grant permission to enable this feature!</string>
    <string name="ERROR_LOCATION_OFF">Your device location services are currently disabled! You must enable it to use this feature!</string>
    <string name="MY_LOCATION">Use My current location</string>
    <string name="USE_MY_LOCATION">Use the Location I choose</string>
    <string name="USE_POINT_STARTS">Pick Start Point</string>
    <string name="TOOLTIPS">Tooltips Detail Maps</string>
    <string name="TOOLTIPS_IMAGE">Tooltips Image Maps</string>
    <string name="AGREE">Yes</string>
    <string name="DISAGREE">Cancel</string>
    <string name="USE_LOCATION">Do you wish to use this location?</string>
    <string name="USE_LOCATION_NOTFOUND">Location not found!</string>
    <string name="PICK_LOCATION">Tap the map to select a location</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_desc">This is app widget description</string>
</resources>