<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarlogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TEXT_LOGIN_APP"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:paddingLeft="28dp"
        android:paddingTop="20dp"
        android:paddingRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Iv_Login"
            android:layout_width="113dp"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:contentDescription="@string/TEXT_LOGIN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_applogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/TEXT_WELCOME_LOGIN"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:text="@string/MSG_LOGIN"
            android:textColor="#000000" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <LinearLayout
            android:id="@+id/Ln_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Welcome">

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tv_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="4dp"
                android:alpha="0.4"
                android:text="@string/EMAIL"
                android:textColor="#000000"
                android:textStyle="bold" />

            <app.benaya.mystory.customviews.CustomViewsEmails
                android:id="@+id/et_Email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:drawableEnd="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/EMAIL_HINT"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#80837E7E"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tv_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="4dp"
                android:alpha="0.4"
                android:text="@string/PASSWORD"
                android:textColor="#000000"
                android:textStyle="bold" />

            <app.benaya.mystory.customviews.CustomPasswordsViews
                android:id="@+id/et_Pass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:drawableEnd="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/PASSWORD_HINT"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#80837E7E"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <LinearLayout
                android:id="@+id/vw_line"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="60dp"
                    android:background="#f4f7fe" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/primary"
                android:text="@string/TEXT_LOGIN"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_Welcome"
                app:layout_constraintStart_toStartOf="@+id/tv_Welcome"
                app:layout_constraintTop_toBottomOf="@+id/open" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
