...
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#f4f7fe"/>

    <TextView
        android:id="@+id/tv_logout"
        style="@style/viewParent.headerText.settingsTextIcon"
        android:drawableLeft="@drawable/ic_logout"
        android:text="@string/LOGOUT" />

    <TextView
        android:id="@+id/tv_lastlogin"
...
